// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventPipelineRunner runAsyncHandlersEventPipeline() runs remaining steps 1`] = `
Array [
  Array [
    "runAsyncHandlersStep",
    Array [
      Object {
        "distinctId": "my_id",
        "elementsList": Array [],
        "event": "$pageview",
        "eventUuid": "uuid1",
        "ip": "127.0.0.1",
        "person": "testPerson",
        "properties": Object {},
        "teamId": 2,
        "timestamp": "2020-02-23T02:15:00Z",
      },
    ],
  ],
]
`;

exports[`EventPipelineRunner runBufferEventPipeline() runs remaining steps 1`] = `
Array [
  Array [
    "processPersonsStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00Z",
        "uuid": "uuid1",
      },
      "testPerson",
    ],
  ],
  Array [
    "pluginsProcessEventStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00Z",
        "uuid": "uuid1",
      },
      Object {
        "person": Object {
          "created_at": "2020-02-23T02:15:00.000Z",
          "id": 123,
          "is_identified": true,
          "is_user_id": 0,
          "properties": Object {},
          "properties_last_operation": Object {},
          "properties_last_updated_at": Object {},
          "team_id": 2,
          "uuid": "uuid",
          "version": 0,
        },
        "personUpdateProperties": Object {},
      },
    ],
  ],
  Array [
    "updatePersonIfTouchedByPlugins",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00Z",
        "uuid": "uuid1",
      },
      Object {
        "person": Object {
          "created_at": "2020-02-23T02:15:00.000Z",
          "id": 123,
          "is_identified": true,
          "is_user_id": 0,
          "properties": Object {},
          "properties_last_operation": Object {},
          "properties_last_updated_at": Object {},
          "team_id": 2,
          "uuid": "uuid",
          "version": 0,
        },
        "personUpdateProperties": Object {},
      },
    ],
  ],
  Array [
    "prepareEventStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00Z",
        "uuid": "uuid1",
      },
      Object {
        "created_at": "2020-02-23T02:15:00.000Z",
        "id": 123,
        "is_identified": true,
        "is_user_id": 0,
        "properties": Object {},
        "properties_last_operation": Object {},
        "properties_last_updated_at": Object {},
        "team_id": 2,
        "uuid": "uuid",
        "version": 0,
      },
    ],
  ],
  Array [
    "createEventStep",
    Array [
      Object {
        "distinctId": "my_id",
        "elementsList": Array [],
        "event": "$pageview",
        "eventUuid": "uuid1",
        "ip": "127.0.0.1",
        "properties": Object {},
        "teamId": 2,
        "timestamp": "2020-02-23T02:15:00Z",
      },
    ],
  ],
  Array [
    "runAsyncHandlersStep",
    Array [
      Object {
        "distinctId": "my_id",
        "elementsList": Array [],
        "event": "$pageview",
        "eventUuid": "uuid1",
        "ip": "127.0.0.1",
        "properties": Object {},
        "teamId": 2,
        "timestamp": "2020-02-23T02:15:00Z",
      },
    ],
  ],
]
`;

exports[`EventPipelineRunner runEventPipeline() runs all steps 1`] = `
Array [
  Array [
    "emitToBufferStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00Z",
        "uuid": "uuid1",
      },
    ],
  ],
  Array [
    "processPersonsStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00Z",
        "uuid": "uuid1",
      },
      Object {
        "created_at": "2020-02-23T02:15:00.000Z",
        "id": 123,
        "is_identified": true,
        "is_user_id": 0,
        "properties": Object {},
        "properties_last_operation": Object {},
        "properties_last_updated_at": Object {},
        "team_id": 2,
        "uuid": "uuid",
        "version": 0,
      },
    ],
  ],
  Array [
    "pluginsProcessEventStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00Z",
        "uuid": "uuid1",
      },
      Object {
        "person": Object {
          "created_at": "2020-02-23T02:15:00.000Z",
          "id": 123,
          "is_identified": true,
          "is_user_id": 0,
          "properties": Object {},
          "properties_last_operation": Object {},
          "properties_last_updated_at": Object {},
          "team_id": 2,
          "uuid": "uuid",
          "version": 0,
        },
        "personUpdateProperties": Object {},
      },
    ],
  ],
  Array [
    "updatePersonIfTouchedByPlugins",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00Z",
        "uuid": "uuid1",
      },
      Object {
        "person": Object {
          "created_at": "2020-02-23T02:15:00.000Z",
          "id": 123,
          "is_identified": true,
          "is_user_id": 0,
          "properties": Object {},
          "properties_last_operation": Object {},
          "properties_last_updated_at": Object {},
          "team_id": 2,
          "uuid": "uuid",
          "version": 0,
        },
        "personUpdateProperties": Object {},
      },
    ],
  ],
  Array [
    "prepareEventStep",
    Array [
      Object {
        "distinct_id": "my_id",
        "event": "default event",
        "ip": "127.0.0.1",
        "now": "2020-02-23T02:15:00Z",
        "properties": Object {},
        "site_url": "http://localhost",
        "team_id": 2,
        "timestamp": "2020-02-23T02:15:00Z",
        "uuid": "uuid1",
      },
      Object {
        "created_at": "2020-02-23T02:15:00.000Z",
        "id": 123,
        "is_identified": true,
        "is_user_id": 0,
        "properties": Object {},
        "properties_last_operation": Object {},
        "properties_last_updated_at": Object {},
        "team_id": 2,
        "uuid": "uuid",
        "version": 0,
      },
    ],
  ],
  Array [
    "createEventStep",
    Array [
      Object {
        "distinctId": "my_id",
        "elementsList": Array [],
        "event": "$pageview",
        "eventUuid": "uuid1",
        "ip": "127.0.0.1",
        "properties": Object {},
        "teamId": 2,
        "timestamp": "2020-02-23T02:15:00Z",
      },
    ],
  ],
  Array [
    "runAsyncHandlersStep",
    Array [
      Object {
        "distinctId": "my_id",
        "elementsList": Array [],
        "event": "$pageview",
        "eventUuid": "uuid1",
        "ip": "127.0.0.1",
        "properties": Object {},
        "teamId": 2,
        "timestamp": "2020-02-23T02:15:00Z",
      },
    ],
  ],
]
`;
